@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: socket.c,v 1.275.10.17 2008/07/24 09:59:15 fdupont Exp $ */
+/* $Id: socket.c,v 1.275.10.18 2008/08/01 01:58:15 jinmei Exp $ */
 
 /*! \file */
 
@@ -3525,6 +3525,16 @@ free_manager:
 	isc_mem_put(mctx, manager, sizeof(*manager));
 
 	return (result);
+}
+
+isc_result_t
+isc_socketmgr_getmaxsockets(isc_socketmgr_t *manager, unsigned int *nsockp) {
+	REQUIRE(VALID_MANAGER(manager));
+	REQUIRE(nsockp != NULL);
+
+	*nsockp = manager->maxsocks;
+
+	return (ISC_R_SUCCESS);
 }
 
 void
