@@ -347,6 +347,7 @@ isc_ratelimiter_shutdown
 isc_refcount_init
 isc_region_compare
 isc_resource_getlimit
+isc_resource_getcurlimit
 isc_resource_setlimit
 isc_result_register
 isc_result_totext
@@ -430,6 +431,7 @@ isc_socket_sendv
 isc_socket_setname
 isc_socketmgr_create
 isc_socketmgr_destroy
+isc_socketmgr_getmaxsockets
 isc_stdio_close
 isc_stdio_flush
 isc_stdio_open
